default role for members with default permissions; restrictions on controller methods